<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2017 Simon Marquis
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FCM toolbox</string>
    <string name="fetching">Fetching token…</string>
    <string name="payload_app">App</string>
    <string name="payload_app_store">Play Store</string>
    <string name="payload_app_uninstall">Uninstall</string>
    <string name="payload_link">Link</string>
    <string name="payload_link_open">Open</string>
    <string name="payload_ping">Ping</string>
    <string name="payload_raw">Raw</string>
    <string name="payload_text">Text</string>
    <string name="payload_text_copy">Copy</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="menu_share_token">Share token</string>
    <string name="menu_invalidate_token">Invalidate token</string>
    <string name="menu_topics">Topics</string>
    <string name="menu_delete_all">Delete all messages</string>
    <string name="menu_diagnostics">Diagnostics</string>
    <string name="dialog_delete_all_title" tools:ignore="PluralsCandidate">Delete %d messages?</string>
    <string name="dialog_delete_all_positive">Delete</string>
    <string name="dialog_delete_all_negative">@android:string/cancel</string>
    <string name="snackbar_item_deleted" tools:ignore="PluralsCandidate">%d deleted</string>
    <string name="snackbar_item_undo">Undo</string>
    <string name="snackbar_notification_permission_required">Notifications permission is required</string>
    <string name="snackbar_notification_permission_grant">Grant</string>
    <string name="topics_hint">Topic name</string>
    <string name="topics_subscribe">Subscribe</string>
    <string name="topics_subscribed">Subscribed to topic: `%s`</string>
    <string name="topics_unsubscribe">Unsubscribe</string>
    <string name="topics_unsubscribed">Unsubscribed from topic: `%s`</string>
    <string name="presence_online">Online</string>
    <string name="presence_offline">Offline</string>

    <!-- Connection Analysis -->
    <string name="menu_connection_analysis">连接分析</string>
    <string name="connection_analysis_title">连接分析</string>
    <string name="connection_status_connected">已连接</string>
    <string name="connection_status_disconnected">已断开</string>
    <string name="connection_status_error">连接错误</string>

    <!-- Statistics -->
    <string name="stats_total_online_time">总在线时间</string>
    <string name="stats_connection_count">连接次数</string>
    <string name="stats_average_duration">平均连接时长</string>
    <string name="stats_longest_connection">最长连接时间</string>
    <string name="stats_today_online_time">今日在线时间</string>
    <string name="stats_today_connections">今日连接次数</string>

    <!-- Time formats -->
    <string name="time_format_hours">%d小时</string>
    <string name="time_format_minutes">%d分钟</string>
    <string name="time_format_seconds">%d秒</string>
    <string name="time_format_hours_minutes">%d小时%d分钟</string>
    <string name="time_format_minutes_seconds">%d分钟%d秒</string>

    <!-- Connection History -->
    <string name="connection_history_title">连接历史</string>
    <string name="connection_history_empty">暂无连接历史记录</string>
    <string name="connection_timeline_title">连接时间线</string>

    <!-- Tabs -->
    <string name="tab_overview">概览</string>
    <string name="tab_history">历史</string>
    <string name="tab_charts">图表</string>
</resources>
